[gd_scene load_steps=9 format=2]

[ext_resource path="res://scripts/game.gd" type="Script" id=1]
[ext_resource path="res://assets/images/background_grass.jpg" type="Texture" id=2]
[ext_resource path="res://assets/icons/plunger.png" type="Texture" id=3]
[ext_resource path="res://scripts/plunger.gd" type="Script" id=4]
[ext_resource path="res://assets/icons/eraser.png" type="Texture" id=5]
[ext_resource path="res://assets/icons/dynamite.png" type="Texture" id=6]
[ext_resource path="res://scripts/create_btn.gd" type="Script" id=7]
[ext_resource path="res://scripts/destroy_btn.gd" type="Script" id=8]

[node name="game_world" type="Node2D"]
script = ExtResource( 1 )

[node name="bg_layer" type="CanvasLayer" parent="."]
layer = -2

[node name="background" type="Sprite" parent="bg_layer"]
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 2 )
centered = false

[node name="line_layer" type="CanvasLayer" parent="."]

[node name="ui_layer" type="CanvasLayer" parent="."]
layer = 2

[node name="plunger_btn" type="Control" parent="ui_layer"]
margin_left = 40.0
margin_top = 450.0
margin_right = 132.0
margin_bottom = 548.0
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="plunger_icon" type="Sprite" parent="ui_layer/plunger_btn"]
scale = Vector2( 0.6, 0.4 )
texture = ExtResource( 3 )
centered = false

[node name="create_conn_btn" type="Control" parent="ui_layer"]
margin_left = 733.0
margin_top = 22.0
margin_right = 786.0
margin_bottom = 80.0
script = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="create_icon" type="Sprite" parent="ui_layer/create_conn_btn"]
position = Vector2( 4.75, 3.8 )
scale = Vector2( 0.4, 0.4 )
texture = ExtResource( 6 )
centered = false

[node name="destroy_conn_btn" type="Control" parent="ui_layer"]
margin_left = 733.05
margin_top = 89.95
margin_right = 784.05
margin_bottom = 140.95
script = ExtResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="destroy_icon" type="Sprite" parent="ui_layer/destroy_conn_btn"]
scale = Vector2( 0.4, 0.4 )
texture = ExtResource( 5 )
centered = false
